NetBSD Problem Report #57421

From www@netbsd.org  Fri May 19 10:39:34 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E05071A923A
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 19 May 2023 10:39:34 +0000 (UTC)
Message-Id: <20230519103932.D6D1B1A923B@mollari.NetBSD.org>
Date: Fri, 19 May 2023 10:39:32 +0000 (UTC)
From: mp@petermann-it.de
Reply-To: mp@petermann-it.de
To: gnats-bugs@NetBSD.org
Subject: VND deadlock on NetBSD 10.0_BETA (Xen Dom0 on Xen 4.15)
X-Send-Pr-Version: www-1.0

>Number:         57421
>Category:       kern
>Synopsis:       VND deadlock on NetBSD 10.0_BETA (Xen Dom0 on Xen 4.15)
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri May 19 10:40:00 +0000 2023
>Closed-Date:    Tue Nov 28 02:17:51 +0000 2023
>Last-Modified:  Tue Nov 28 02:17:51 +0000 2023
>Originator:     Matthias Petermann
>Release:        NetBSD-10.0_BETA (build from sources 2023-05-08)
>Organization:
>Environment:
NetBSD vhost2.lan 10.0_BETA NetBSD 10.0_BETA (XEN3_DOM0) #0: Mon May  8 07:40:40 UTC 2023  root@ws.local:/build/netbsd-10/obj/sys/arch/amd64/compile/XEN3_DOM0 amd64

>Description:
While untarring files to a filesystem located on a VND, a sudden
freeze occurs. This PR is the result of a discussion in ports-xen
and #netbsd on IRC where mlelstv helped me to break this down to the
root cause. 

This might not be related as much to Xen as it is to the circumstance
that a Dom0 typically is operated with limited RAM.
>How-To-Repeat:
Chances are good to reproduce in a Dom0 with 512MB RAM. I guess Xen doesn't contribute much here, so maybe in a native system or another VM with similiar small RAM it can be reproduced too.

The following partition layout exists on my test machines:

[ ESP | Root FFSv2 | Swap | Data FFSv2 ]
   |        |          |        |
  dk0      dk1        dk2      dk3     

...while the tar files are located in the Data partition. The vnd backing files are also located on the Data partition.

1) Create the image file as sparse file:

  $ bytes=$(echo "(16*1024*1024*1024)-1"|bc)
  $ doas dd if=/dev/zero of=/data/vhd/net.img bs=1 count=1 seek=$bytes

2) Configure and mount the image:

  $ doas vndconfig vnd0 /data/vhd/net.img
  $ doas newfs -O2 -I /dev/vnd0
  2$ doas mount -o log /dev/vnd0 /mnt/

3) Extract the base system components

  $ cd /mnt/
  $ sets="kern-GENERIC.tar.xz base.tar.xz comp.tar.xz etc.tar.xz man.tar.xz misc.tar.xz modules.tar.xz rescue.tar.xz test.tar.xz text.tar.xz"
  $ setsdir=/data/install/NetBSD-10.0_BETA/amd64/binary/sets
  $ for set in $sets;do doas tar xvfz $setsdir/$set;done 

During the last command (tar xvfz), after it seems to work for a while,
it suddenly comes to a freeze. In a second terminal interaction and inspection with top is still possible. The CPU is in 100% idle in this state, also RAM does not seem to be an obvious problem (no swap used and 
some MB still free). Anyway, interaction is somewhat limited then, and
a "sync" locks the session immediately. Also a reboot is not possible.

I was able to reproduce this problem on two separate systems. On one
of these I was able to capture the backtrace of the vnd0 thread while
the freeze situation was ongoing:

login: ++++[ 136.6327721] fatal breakpoint trap in supervisor mode
[ 136.6327721] trap type 1 code 0 rip 0xffffffff8024196d cs 0xe030 rflags 0x202 cr2 0x7971a5cff000 ilevel 0x6 rsp 0xffffb5804103fbf8
[ 136.6327721] curlwp 0xffffb58000ff8040 pid 0.2 lowest kstack 0xffffb5804103b2c0
Stopped in pid 0.2 (system) at  netbsd:breakpoint+0x5:  leave
breakpoint() at netbsd:breakpoint+0x5
xencons_tty_input() at netbsd:xencons_tty_input+0xb2
xencons_intr() at netbsd:xencons_intr+0x50
xen_intr_biglock_wrapper() at netbsd:xen_intr_biglock_wrapper+0x1b
evtchn_do_event() at netbsd:evtchn_do_event+0x118
do_hypervisor_callback() at netbsd:do_hypervisor_callback+0x167
Xhandle_hypervisor_callback() at netbsd:Xhandle_hypervisor_callback+0x1a
--- interrupt ---
hypercall_page() at netbsd:hypercall_page+0x3aa
idle_loop() at netbsd:idle_loop+0x146
ds          0
es          7780
fs          cb79
gs          fbf8
rdi         ffffb580012c6080
rsi         ffffffff8128fe70    rbuf.0
rbp         ffffb5804103fbf8
rbx         ffffffff8128fe70    rbuf.0
rdx         2b
rcx         2b
rax         1
r8          349a
r9          0
r10         0
r11         246
r12         ffffb580012c7780
r13         ffffb580012c6080
r14         ffffffff8128fe71    rbuf.0+0x1
r15         ffffb580012c5200
rip         ffffffff8024196d    breakpoint+0x5
cs          e030
rflags      202
rsp         ffffb5804103fbf8
ss          e02b
netbsd:breakpoint+0x5:  leave
----------------------------------------------------------------------
db{0}> bt
breakpoint() at netbsd:breakpoint+0x5
xencons_tty_input() at netbsd:xencons_tty_input+0xb2
xencons_intr() at netbsd:xencons_intr+0x50
xen_intr_biglock_wrapper() at netbsd:xen_intr_biglock_wrapper+0x1b
evtchn_do_event() at netbsd:evtchn_do_event+0x118
do_hypervisor_callback() at netbsd:do_hypervisor_callback+0x167
Xhandle_hypervisor_callback() at netbsd:Xhandle_hypervisor_callback+0x1a
--- interrupt ---
hypercall_page() at netbsd:hypercall_page+0x3aa
idle_loop() at netbsd:idle_loop+0x146
db{0}> ps
PID    LID S CPU     FLAGS       STRUCT LWP *               NAME WAIT
598    598 3   0         0   ffffb58002d85780                tar vndpc
580    580 3   0       180   ffffb58002d85340                top select
1718  1718 3   0       180   ffffb58002d2eb80                ksh pause
443    443 3   0       180   ffffb580028f7b40                ksh pause
1529  1529 3   0       180   ffffb58002d2e300               tmux kqueue
2168  2168 3   0       180   ffffb58001628540               tmux kqueue
436    436 3   0       180   ffffb58001858a40                ksh pause
431    431 3   0       180   ffffb580016c59c0               sshd poll
433    433 3   0       180   ffffb580016c5140               sshd poll
425    425 3   0       180   ffffb58001ef2a80               ntpd netio
428    428 3   0       180   ffffb580023866c0              getty ttyraw
427    427 3   0       180   ffffb58002386280              getty ttyraw
424    424 3   0       180   ffffb58001628980              getty ttyraw
1881  1881 3   0       180   ffffb580013fc240              getty ttyraw
1249  1249 3   0       180   ffffb580028f7700               cron nanoslp
467    467 3   0       180   ffffb58001ef2200              inetd kqueue
460    460 3   0       180   ffffb58002386b00               qmgr kqueue
459    459 3   0       180   ffffb58001ef2640             pickup kqueue
457    457 3   0       180   ffffb580028f72c0             master kqueue
173    173 3   0       180   ffffb58001f19ac0               sshd poll
1567  1567 3   0       180   ffffb58001f19240             powerd kqueue
348    348 3   0       180   ffffb58001f19680               ntpd pause
193    195 3   0       180   ffffb580017385c0        xenconsoled netio
193    193 3   0       180   ffffb580016c5580        xenconsoled poll
1720  1720 3   0       180   ffffb58001858600          xenstored poll
1081  1081 3   0       180   ffffb58001738a00            syslogd kqueue
1        1 3   0       180   ffffb580015288c0               init wait
0      306 3   0       200   ffffb580012c9180               vnd0 uvnfp1
0     1824 3   0       200   ffffb580018581c0        xen_balloon xen_balloon
0      801 3   0       200   ffffb58001738180       bridge_rtage bridge_rtage
0      156 3   0       200   ffffb580016270c0            physiod physiod
0      124 3   0       200   ffffb58001628100          pooldrain pooldrain
0      123 3   0       240   ffffb58001627940            ioflush tstile
0      122 3   0       200   ffffb58001627500           pgdaemon vndpc
0      119 3   0       200   ffffb58001539900          atapibus0 sccomp
0      116 3   0       200   ffffb580013f2a80               usb3 usbevt
0      115 3   0       200   ffffb580015394c0               usb2 usbevt
0      114 3   0       200   ffffb58001539080             npfgc0 npfgcw
0      113 3   0       200   ffffb58001528480            rt_free rt_free
0      112 3   0       200   ffffb58001528040              unpgc unpgc
0      111 3   0       200   ffffb58001501bc0    key_timehandler key_timehandler

0      110 3   0       200   ffffb58001501780    icmp6_wqinput/0 icmp6_wqinput
0      109 3   0       200   ffffb580013fc680          nd6_timer nd6_timer
0      108 3   0       200   ffffb580013fcac0    carp6_wqinput/0 carp6_wqinput
0      107 3   0       200   ffffb580013fd280     carp_wqinput/0 carp_wqinput
0      106 3   0       200   ffffb580013fd6c0     icmp_wqinput/0 icmp_wqinput
0      105 3   0       200   ffffb580013fdb00           rt_timer rt_timer
0      104 3   0       200   ffffb580014002c0        vmem_rehash vmem_rehash
0      103 3   0       200   ffffb58001501340               usb1 usbevt
0      102 3   0       200   ffffb58001403b80               usb0 usbevt
0      101 3   0       200   ffffb58001403740             xenbus xsio
0      100 3   0       200   ffffb58001403300           xenwatch evtsq
0       99 3   0       200   ffffb58001400b40            acpitz1 acpitz1
0       98 3   0       200   ffffb58001400700            acpitz0 acpitz0
0       24 3   0       200   ffffb580013f2640          entbutler entropy
0       23 3   0       240   ffffb580013f2200            atabus1 atath
0       22 3   0       240   ffffb580013cca40            atabus0 atath
0       21 3   0       200   ffffb580013cc600           wm0Reset wm0Reset
0       20 3   0       200   ffffb580013cc1c0          wm0TxRx/0 wm0TxRx
0       19 3   0       200   ffffb580012c9a00         usbtask-dr usbtsk
0       18 3   0       200   ffffb580012c95c0         usbtask-hc usbtsk
0       16 3   0       200   ffffb580010119c0             sysmon smtaskq
0       15 3   0       200   ffffb58001011580         pmfsuspend pmfsuspend
0       14 3   0       200   ffffb58001011140           pmfevent pmfevent
0       13 3   0       200   ffffb5800100e980         sopendfree sopendfr
0       12 3   0       200   ffffb5800100e540             ifwdog ifwdog
0       11 3   0       200   ffffb5800100e100            iflnkst iflnkst
0       10 3   0       200   ffffb58001003940           nfssilly nfssilly
0        9 3   0       200   ffffb58001003500             vdrain vdrain
0        8 3   0       200   ffffb580010030c0          modunload mod_unld
0        7 3   0       200   ffffb58000ffb900            xcall/0 xcall
0        6 1   0       200   ffffb58000ffb4c0          softser/0
0        5 1   0       200   ffffb58000ffb080          softclk/0
0        4 1   0       200   ffffb58000ff88c0          softbio/0
0        3 1   0       200   ffffb58000ff8480          softnet/0
0    >   2 1   0       201   ffffb58000ff8040             idle/0
0        0 3   0       200   ffffffff81140480            swapper uvm
----------------------------------------------------------------------
db{0}> bt ffffb580012c9180
sleepq_locks() at ffffffff81167300
----------------------------------------------------------------------
db{0}> bt/a ffffb580012c9180
trace: pid 0 lid 306 at 0xffffb5805201e7b0
sleepq_block() at netbsd:sleepq_block+0x13a
mtsleep() at netbsd:mtsleep+0x17f
uvn_findpage() at netbsd:uvn_findpage+0x20a
uvn_findpages() at netbsd:uvn_findpages+0xdd
genfs_getpages() at netbsd:genfs_getpages+0x6a7
VOP_GETPAGES() at netbsd:VOP_GETPAGES+0x52
ufs_balloc_range() at netbsd:ufs_balloc_range+0x114
ffs_write() at netbsd:ffs_write+0x346
VOP_WRITE() at netbsd:VOP_WRITE+0xf3
vn_rdwr() at netbsd:vn_rdwr+0xc9
vndthread() at netbsd:vndthread+0x6d8
db{0}> 
>Fix:
mlelstv provided a patch for vnd.c which I am going to test now. I will respond with results as soon as possible.

>Release-Note:

>Audit-Trail:
From: "Michael van Elst" <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57421 CVS commit: src/sys/dev
Date: Fri, 19 May 2023 15:42:43 +0000

 Module Name:	src
 Committed By:	mlelstv
 Date:		Fri May 19 15:42:43 UTC 2023

 Modified Files:
 	src/sys/dev: vnd.c

 Log Message:
 Neither limit the number of requests for the page daemon.
 Otherwise you may deadlock when the backend needs to allocate
 memory and the page daemon needs to flush dirty vnd buffers.

 See PR 57421 for details.


 To generate a diff of this commit:
 cvs rdiff -u -r1.288 -r1.289 src/sys/dev/vnd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Matthias Petermann <mp@petermann-it.de>
To: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: PR/57421 CVS commit: src/sys/dev
Date: Sat, 10 Jun 2023 22:27:20 +0200

 This is a cryptographically signed message in MIME format.

 --------------ms070809090605050309090603
 Content-Type: text/plain; charset=UTF-8; format=flowed
 Content-Transfer-Encoding: 7bit

 Hello Michael,

 after weeks of extensive testing I did not see any performance issue or 
 deadlock after I installed your patched version.

 Are there any objective against pulling this up to netbsd-10?

 Kind regards
 Matthias



 On 19.05.23 17:45, Michael van Elst wrote:
 > The following reply was made to PR kern/57421; it has been noted by GNATS.
 > 
 > From: "Michael van Elst" <mlelstv@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc:
 > Subject: PR/57421 CVS commit: src/sys/dev
 > Date: Fri, 19 May 2023 15:42:43 +0000
 > 
 >   Module Name:	src
 >   Committed By:	mlelstv
 >   Date:		Fri May 19 15:42:43 UTC 2023
 >   
 >   Modified Files:
 >   	src/sys/dev: vnd.c
 >   
 >   Log Message:
 >   Neither limit the number of requests for the page daemon.
 >   Otherwise you may deadlock when the backend needs to allocate
 >   memory and the page daemon needs to flush dirty vnd buffers.
 >   
 >   See PR 57421 for details.
 >   
 >   
 >   To generate a diff of this commit:
 >   cvs rdiff -u -r1.288 -r1.289 src/sys/dev/vnd.c
 >   
 >   Please note that diffs are not public domain; they are subject to the
 >   copyright notices on the relevant files.
 >   

 --------------ms070809090605050309090603
 Content-Type: application/pkcs7-signature; name="smime.p7s"
 Content-Transfer-Encoding: base64
 Content-Disposition: attachment; filename="smime.p7s"
 Content-Description: S/MIME Cryptographic Signature

 MIAGCSqGSIb3DQEHAqCAMIACAQExDzANBglghkgBZQMEAgEFADCABgkqhkiG9w0BBwEAAKCC
 Cc8wggSSMIIDeqADAgECAgh7b+hpj4hxdjANBgkqhkiG9w0BAQsFADBmMQswCQYDVQQGEwJE
 RTEzMDEGA1UECgwqREdOIERldXRzY2hlcyBHZXN1bmRoZWl0c25ldHogU2VydmljZSBHbWJI
 MSIwIAYDVQQDDBlkZ25zZXJ2aWNlIENBIDIgVHlwZSBFOlBOMB4XDTIzMDIyNzA5Mjg0N1oX
 DTI0MDIyNzA5Mjg0N1owcDELMAkGA1UEBhMCREUxITAfBgNVBAUTGDQwMDAwMDAwNjNmYzdh
 MmMyMzY3MDZjNDEbMBkGA1UEAwwSTWF0dGhpYXMgUGV0ZXJtYW5uMSEwHwYJKoZIhvcNAQkB
 FhJtcEBwZXRlcm1hbm4taXQuZGUwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCv
 UU/+BQYtChQynhczrQa1mva2NJubL2tUGxh5fzYdir3xRlXM/Y55e42uXJnFevtrdCjC/3gD
 i5y+aMQTpUvsNlUC+LiSTqLMYnPwRi83L7+tCip4vn/mhHSgnpnwQFsJ6dwYELLTIOa0Hfy8
 34WD2U+ti71x4Ov2Ghq+FBX+lQusP8UZmvWP8OGzpn964cBWbAsmNk9JbOOf097U+fXs3cOX
 eqC5w+46iA+K/LMQY4TqCd7vw1X4eptT6dj/3CP9wxamdgu69C7TXpCLhjSet7k3f9nX2Gxa
 uqUCHbfxzzyRm7I9ytwpswQRZQYUZ5ztQYN0quOp/h5zk0rybKcFAgMBAAGjggE4MIIBNDAd
 BgNVHQ4EFgQU9XRgKeE4dGBY+hQKQCaHHxqp8ewwDAYDVR0TAQH/BAIwADAfBgNVHSMEGDAW
 gBTpxpPR1Q8GZHLqapY+uhDyVFSyeTBWBgNVHSAETzBNMEsGDCsGAQQB+ysCAQMCCDA7MDkG
 CCsGAQUFBwIBFi1odHRwOi8vc2VjNS5kZ25zZXJ2aWNlLmRlL3BvbGljaWVzL2luZGV4Lmh0
 bWwwPgYDVR0fBDcwNTAzoDGgL4YtaHR0cDovL3NlYzUuZGduc2VydmljZS5kZS9jcmwvY3Js
 Mi10eXBlLWUuY3JsMA4GA1UdDwEB/wQEAwIEsDAdBgNVHSUEFjAUBggrBgEFBQcDAgYIKwYB
 BQUHAwQwHQYDVR0RBBYwFIESbXBAcGV0ZXJtYW5uLWl0LmRlMA0GCSqGSIb3DQEBCwUAA4IB
 AQAIuNIxzvPQ003CW1tA4MkfWTtkCHajiB/37Cd9txEu3ielx/KBRYcLYM30W07UkFDLrP2V
 qx/ct5NyRv9gFBvtk790gsy4+hYcEIn4y0Gr0fxIdHgAjlAFvPt0Rj+oweDpIyqJ8xtZiN8H
 zhgHq2OYOp911f/nbgZ36Swela3GWghr19ZHirFp9b63DH91mKcFzZPZ1QeaFQ8Wcvb6Hld3
 6+MIbuai4eLX3nirv6fSCIXlPH+iI5iV2eJNZfU8jSpTrwv9sRpjrJjSVqOqoBYKuZU43g/n
 GKzADoJVVd/jGMNZka3Pfqd3JtAp2YZhh+d5S1ZpQFCCXnk6F6nY0C32MIIFNTCCBB2gAwIB
 AgIIVRxK12atJfYwDQYJKoZIhvcNAQELBQAwYTELMAkGA1UEBhMCREUxMzAxBgNVBAoMKkRH
 TiBEZXV0c2NoZXMgR2VzdW5kaGVpdHNuZXR6IFNlcnZpY2UgR21iSDEdMBsGA1UEAwwUZGdu
 c2VydmljZSBSb290IDc6UE4wHhcNMTYxMDI2MDkyMjQxWhcNMjQxMDI2MDkyMjQxWjBmMQsw
 CQYDVQQGEwJERTEzMDEGA1UECgwqREdOIERldXRzY2hlcyBHZXN1bmRoZWl0c25ldHogU2Vy
 dmljZSBHbWJIMSIwIAYDVQQDDBlkZ25zZXJ2aWNlIENBIDIgVHlwZSBFOlBOMIIBIjANBgkq
 hkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA3KXylD90x6NH0pdmzmujzW0XA2GWhOGVd7yxq3v1
 OOOTrEWoTkT3j//S+J8nEyun1GsKQ06jmg8bV2MY6CTQvS5ykcVQf1JAX9IdubzdC9YleCoQ
 mmPE4pldM9slEpW9jbmeIHQVOvaiZGrKmI/gD/DnEDqNInY/Ta9XpaBw99otCQz5IQY/FX+n
 Om+5jcp/Mn2WL2Zc81dokP3L6OohS8dsIBu5gpDmfAQBxgxcOk9FCANAZOtGIUTEcSOxl4zM
 QUANmP116D+Hb0Aw7TDZitK+Q1F6H/O8Nm613LbkNm+MTcBSBK1aAELvH7Z105vYjrWjrFsi
 zGV+r+bM2kAagQIDAQABo4IB6jCCAeYwEgYDVR0TAQH/BAgwBgEB/wIBADAfBgNVHSMEGDAW
 gBQBDBYbdHLTPBTuJne3SRRT2PuLGzBbBggrBgEFBQcBAQRPME0wSwYIKwYBBQUHMAGGP2h0
 dHA6Ly9yb2NzcC1kZ24uZGduc2VydmljZS5kZTo4MDgwL2VqYmNhL3B1YmxpY3dlYi9zdGF0
 dXMvb2NzcDBqBgNVHSAEYzBhMF8GDCsGAQQB+ysCAQQCATBPME0GCCsGAQUFBwIBFkFodHRw
 Oi8vd3d3LmRnbnNlcnZpY2UuZGUvdHJ1c3RjZW50ZXIvcHVibGljL2RnbnNlcnZpY2UvaW5k
 ZXguaHRtbDCBmQYDVR0fBIGRMIGOMIGLoIGIoIGFhoGCbGRhcDovL2xkYXAuZGduc2Vydmlj
 ZS5kZTozODkvQ049Q1JMLTEsTz1ER04lMjBTZXJ2aWNlJTIwR21iSCxDPURFP2NlcnRpZmlj
 YXRlUmV2b2NhdGlvbkxpc3Q/YmFzZT9vYmplY3RDbGFzcz1jUkxEaXN0cmlidXRpb25Qb2lu
 dDAdBgNVHQ4EFgQU6caT0dUPBmRy6mqWProQ8lRUsnkwDgYDVR0PAQH/BAQDAgEGMBsGCSsG
 AQQBwG0DBQQOMAwGCisGAQQBwG0DBQEwDQYJKoZIhvcNAQELBQADggEBAKu8OfpFyfv8U2rd
 I4k1+Bg1+R1HkKIagLixn6LR3KkKqoxfBulFCNKuItLZ4R7ZXYWazQThK4E4RrE6DWdWNhp9
 BUa3K1FPS54UjMHdVydCXuhEUnRIeL13/GMSUBmSTwjyXK25YbntJpsDvZ24SnsBoJYbeVVk
 h00vL6uQ2t828RRupSHROtleCqnDAIsmNgXy/ILgj7HE1pebcSa42+BDaPZ0anc7FzRBt8ss
 4Jsr+s50OKRoE3uROql8eWzulwg6FCuCs9UvNj80eob3MSmaO5Citrrdgd27sFPMan8O9xDB
 /Ipr+C1v0sefcChJSo4o4x3TaxRv8DEaGw2MzMkxggOCMIIDfgIBATByMGYxCzAJBgNVBAYT
 AkRFMTMwMQYDVQQKDCpER04gRGV1dHNjaGVzIEdlc3VuZGhlaXRzbmV0eiBTZXJ2aWNlIEdt
 YkgxIjAgBgNVBAMMGWRnbnNlcnZpY2UgQ0EgMiBUeXBlIEU6UE4CCHtv6GmPiHF2MA0GCWCG
 SAFlAwQCAQUAoIIB4TAYBgkqhkiG9w0BCQMxCwYJKoZIhvcNAQcBMBwGCSqGSIb3DQEJBTEP
 Fw0yMzA2MTAyMDI3MjBaMC8GCSqGSIb3DQEJBDEiBCAr22djmZKHnXOgY/eVAd0ffNmUaPIU
 91JU7xXCXkrH1jBsBgkqhkiG9w0BCQ8xXzBdMAsGCWCGSAFlAwQBKjALBglghkgBZQMEAQIw
 CgYIKoZIhvcNAwcwDgYIKoZIhvcNAwICAgCAMA0GCCqGSIb3DQMCAgFAMAcGBSsOAwIHMA0G
 CCqGSIb3DQMCAgEoMIGBBgkrBgEEAYI3EAQxdDByMGYxCzAJBgNVBAYTAkRFMTMwMQYDVQQK
 DCpER04gRGV1dHNjaGVzIEdlc3VuZGhlaXRzbmV0eiBTZXJ2aWNlIEdtYkgxIjAgBgNVBAMM
 GWRnbnNlcnZpY2UgQ0EgMiBUeXBlIEU6UE4CCHtv6GmPiHF2MIGDBgsqhkiG9w0BCRACCzF0
 oHIwZjELMAkGA1UEBhMCREUxMzAxBgNVBAoMKkRHTiBEZXV0c2NoZXMgR2VzdW5kaGVpdHNu
 ZXR6IFNlcnZpY2UgR21iSDEiMCAGA1UEAwwZZGduc2VydmljZSBDQSAyIFR5cGUgRTpQTgII
 e2/oaY+IcXYwDQYJKoZIhvcNAQEBBQAEggEANGeAtWAn7LfvoIEYSHN86LG7o47jMM1CFAgX
 MEdy7NfQxHP8W6BTQjIaodJOoagV+zeAPgsf/Wef75LFK8bChmyRWf+epIc5/RmpkuzQQCq8
 G6OzTCumuDXBOPbvnvpBpwsO/rI/gV19d0oGHhyfi8g7qGakF4csphKYr/zWthV0IV5HGPiK
 qFqwOFfLKvnkIDiuSlh8p8ylqbcOD0RxDeA6bp1tgZjsF5MXYxVUWaPNHZzTrA8xzzTSPGME
 ZwckK00oAW1w8knzztr4gaPdb9WztFcLXwMsoYEiYkycgfTlrYyAefigKB+R+SzSO0/7oUeW
 QECaMgGWoJTzO4B3xwAAAAAAAA==
 --------------ms070809090605050309090603--

State-Changed-From-To: open->needs-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Thu, 17 Aug 2023 09:45:07 +0000
State-Changed-Why:
needs pullup-10
might need pullup-9, pullup-8 -- not sure yet


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57421 CVS commit: [netbsd-10] src/sys/dev
Date: Thu, 17 Aug 2023 10:00:01 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Aug 17 10:00:01 UTC 2023

 Modified Files:
 	src/sys/dev [netbsd-10]: vnd.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #330):

 	sys/dev/vnd.c: revision 1.289

 Neither limit the number of requests for the page daemon.

 Otherwise you may deadlock when the backend needs to allocate
 memory and the page daemon needs to flush dirty vnd buffers.

 See PR 57421 for details.


 To generate a diff of this commit:
 cvs rdiff -u -r1.287.4.1 -r1.287.4.2 src/sys/dev/vnd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57421 CVS commit: [netbsd-9] src/sys/dev
Date: Mon, 21 Aug 2023 10:57:07 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Aug 21 10:57:07 UTC 2023

 Modified Files:
 	src/sys/dev [netbsd-9]: vnd.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #1716):

 	sys/dev/vnd.c: revision 1.289

 Neither limit the number of requests for the page daemon.

 Otherwise you may deadlock when the backend needs to allocate
 memory and the page daemon needs to flush dirty vnd buffers.

 See PR 57421 for details.


 To generate a diff of this commit:
 cvs rdiff -u -r1.272.4.1 -r1.272.4.2 src/sys/dev/vnd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: needs-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Tue, 28 Nov 2023 02:17:51 +0000
State-Changed-Why:
can't pull up to netbsd-8 without PR 57263 pullup too
(please reopen both if this is relevant)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.